<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:icon="@drawable/ic_beranda"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/navigation2"
            android:checked="false"
            android:icon="@drawable/ic_naikbus"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/navigation3"
            android:checked="false"
            android:icon="@drawable/ic_profil"
            android:title="@string/navigation_view_item_3" />
        <item
            android:id="@+id/navigation4"
            android:checked="false"
            android:icon="@drawable/ic_saldo"
            android:title="@string/navigation_view_item_4" />
        <item
            android:id="@+id/navigation5"
            android:checked="false"
            android:icon="@drawable/ic_jadwal"
            android:title="@string/navigation_view_item_5" />
        <item
            android:id="@+id/navigation6"
            android:checked="false"
            android:icon="@drawable/ic_riwayat"
            android:title="@string/navigation_view_item_6" />
        <item
            android:id="@+id/navigationtambahan"
            android:checked="false"
            android:icon="@drawable/ic_riwayat"
            android:title="@string/navigation_view_item_tambahan" />
    </group>
    <item
        android:id="@+id/navigasi_kategori_2"
        android:title="@string/navigasi_kategori_2">
        <menu>
            <item
                android:id="@+id/navigation7"
                android:checked="false"
                android:icon="@drawable/ic_setting"
                android:title="@string/navigation_view_item_7" />
            <item
                android:id="@+id/navigation8"
                android:checked="false"
                android:icon="@drawable/ic_about"
                android:title="@string/navigation_view_item_8" />
            <item
                android:id="@+id/navigation9"
                android:checked="false"
                android:icon="@drawable/ic_logout"
                android:title="@string/navigation_view_item_9" />

        </menu>
    </item>

</menu>